--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </nav>
-    <div>
+    <div width="100%">
       <img align="middle" src="https://avatars.githubusercontent.com/u/79311642?v=4" width="300px" >
     </div>
       <div class="row justify-content-center">
