--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
     <div width="100%">
-      <img align="middle" src="https://avatars.githubusercontent.com/u/79311642?v=4" width="300px" >
+      <img align="center" src="https://avatars.githubusercontent.com/u/79311642?v=4" width="300px" >
     </div>
       <div class="row justify-content-center">
       <div class="col-auto">
