--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
       </div>
     </nav>
-    <div width="100%">
-      <img align="center" src="https://avatars.githubusercontent.com/u/79311642?v=4" width="300px" >
+    <div width="100%" align="center">
+      <img src="https://avatars.githubusercontent.com/u/79311642?v=4" width="300px" >
     </div>
       <div class="row justify-content-center">
       <div class="col-auto">
